manifests/rate-limiting.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: reviews-rate-limiting
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: reviews
  rateLimit:
    type: Local
    local:
      rules:
      - limit:
          requests: 3
          unit: Minute
